fix background on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -23,7 +23,8 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  background-position: bottom center;
+  background-position: center;
+  background-attachment: scroll;
 }
 
 h1 {
